# lr_benchmarks

./: .gitattributes  .gitignore  README.md  benchmark_comparison.md  benchmark_taxonomy.md  relation_to_citeclaw.md  research_synthesis.md
scholarquest/BenchmarkConstruction/: README_v1.md  pyproject.toml  readme.md  run_hint.txt
scholarquest/BenchmarkConstruction/AnswerFilters/: __init__.py  build_qwen_batch_files.py  run_strict_cross_filter.py  submit_qwen_batch_jobs.py  visualize_answer_count_distribution.py
scholarquest/BenchmarkConstruction/AnswerFinding/: run_pasa_answer_finding.py
scholarquest/BenchmarkConstruction/AnswerFinding/paper_agent_v2/: paper_agent_v2.py
scholarquest/BenchmarkConstruction/AnswerFinding_v2/: answer_finding_types.py  prompts.py  run.txt
scholarquest/BenchmarkConstruction/AnswerFinding_v2/paper_agent_v2/: backend_pool.py
scholarquest/BenchmarkConstruction/QueryGeneration/: check_duplicate_queries.py  deduplicate_batch_queries.py  generate_pasa_queries.py  pasa_generation_config_first50_batch.yaml  pasa_query_taxonomy_guidelines.md  pasa_types.py  submit_pasa_batch_jobs.py
scholarquest/BenchmarkConstruction/QueryGeneration/output/: export_final_queries.py
scholarquest/BenchmarkConstruction/SeedGeneration/ArxivTopicCount/: category_counts_all_summary.json  count_arxiv_categories.py
scholarquest/BenchmarkConstruction/SeedGeneration/TopicBucket/: cs_taxonomy.jsonl  (+2 more)
scholarquest/BenchmarkConstruction/configs/: generation.yaml  prompts.yaml
scholarquest/BenchmarkConstruction/scripts/: _add_src_to_path.py  inspect_distribution.py
(+190 files in other folders)
