[project]
name = "papersearchbench"
version = "0.1.0"
description = "Query pool construction pipeline for a paper search benchmark."
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "numpy>=1.26",
  "openai>=1.40.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.2",
  "sentence-transformers>=3.0.1",
  "sortedcontainers>=2.4.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
show_error_codes = true
plugins = ["pydantic.mypy"]
exclude = ["data/"]

[[tool.mypy.overrides]]
module = ["openai"]
ignore_missing_imports = true
